<resources>
    <string name="app_name">WazirxTicker</string>
    <string name="add_coin">Add Coin</string>
    <string name="coin_name">Coin name</string>
    <string name="add">Add</string>
    <string name="enter_valid_coin">Enter a valid coin</string>
    <string name="fetching_coin_details">Fetching coin details</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="home">Home</string>
    <string name="investments">Investments</string>
    <string name="empty_coins_list">Add some coins to monitor their prices</string>

    <string name="volume_format">vol. %1$s</string>
    <string name="price_format">₹%1$s</string>
    <string name="price_format_float">₹%1$d</string>
    <string name="coins">Coins</string>
    <string name="coins_count">Coins count</string>
    <string name="add_investment">Add Investment</string>
    <string name="buy_price">Buy price</string>
    <string name="amount">Amount</string>
    <string name="enter_valid_buy_price">Enter a valid buy price</string>
    <string name="enter_valid_sell_price">Enter a valid sell price</string>
    <string name="enter_valid_amount">Enter a valid amount</string>
    <string name="enter_valid_coins_count">Enter a valid coins count</string>
    <string name="adding_investment">Adding investment</string>
    <string name="each">Each</string>
    <string name="combined">Combined</string>
    <string name="undo_coin_delete">Coin removed</string>
    <string name="history_deleted">History item deleted</string>
    <string name="undo_investment_delete">Investment delete</string>
    <string name="investment_added_to_history">Investment added to History</string>
    <string name="undo">Undo</string>
    <string name="dark_mode">Dark mode</string>
    <string name="toggle_between_dark_and_light_mode">Toggle between dark and light mode</string>
    <string name="toggle_between_inr_usdt">Toggle between INR and USDT currency</string>
    <string name="inr">INR</string>
    <string name="usdt">USDT</string>
    <string name="liking_the_work">Liking the work?</string>
    <string name="show_your_support_by_buying_a_coffee_for_me">Show your support by buying a coffee for me ☕️</string>
    <string name="buy_a_coffee"><u>Buy a coffee</u></string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="buy_date">Buy date</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="sell_date">Sell date</string>
    <string name="sell_price">Sell price</string>
    <string name="add_to_history">Add to History</string>
    <string name="bought_date_less">Bought date should be before the selling date</string>
    <string name="selling_date_less">Selling date should be after the buying date</string>
    <string name="bought_at">Bought at</string>
    <string name="sold_at">Sold at</string>
    <string name="amount_invested">Amount Invested</string>
    <string name="amount_received">Amount Received</string>
    <string name="no_history_yet">No history yet</string>
    <string name="delete">Delete</string>
    <string name="added_in_investment_history">Added in history</string>
    <string name="update_history">Update History</string>
    <string name="update_is_ready_to_install">Update is ready to install</string>
    <string name="install">Install</string>
    <string name="new_version_available">NEW VERSION AVAILABLE</string>
    <string name="update">Update Available</string>
</resources>