<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.coffee.Coffee"
        tools:ignore="MissingConstraints"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/CONSTRAINT_CENTER_HORIZONTAL_TOP"
            android:id="@+id/header"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/liking_the_work"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:id="@+id/description"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@string/show_your_support_by_buying_a_coffee_for_me"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:text="@string/buy_a_coffee"
            android:textColor="@color/md_blue_500"
            android:textStyle="bold"
            android:id="@+id/buy_coffee"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>