<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_date"
                    android:id="@+id/buy_date_label"
                    android:textAppearance="?attr/textAppearanceCaption"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="12/12/2021"
                    android:background="?attr/selectableItemBackground"
                    app:drawableEndCompat="@drawable/ic_down"
                    app:drawableTint="?android:textColor"
                    android:gravity="center_vertical"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:id="@+id/buy_date_picker"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />


            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sell_date"
                    android:id="@+id/sell_date_label"
                    android:textAppearance="?attr/textAppearanceCaption"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="12/12/2021"
                    android:background="?attr/selectableItemBackground"
                    app:drawableEndCompat="@drawable/ic_down"
                    app:drawableTint="?android:textColor"
                    android:gravity="center_vertical"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:id="@+id/sell_date_picker"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/coin_name"
            android:paddingBottom="16dp"
            android:hint="@string/coin_name"
            tools:ignore="Autofill,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:id="@+id/buy_price"
                android:paddingBottom="16dp"
                android:inputType="numberDecimal"
                android:hint="@string/buy_price"
                android:layout_marginEnd="8dp"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:id="@+id/sell_price"
                android:paddingBottom="16dp"
                android:inputType="numberDecimal"
                android:hint="@string/sell_price"
                android:layout_marginEnd="8dp"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginTop="8dp"
                android:id="@+id/coins_count"
                android:paddingBottom="16dp"
                android:hint="@string/coins_count"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,TextFields" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_to_history"
            android:textAllCaps="false"
            android:id="@+id/add_history"
            app:iconGravity="end"
            app:icon="@drawable/ic_sell"
            app:iconSize="20dp"
            />
    </LinearLayout>
</layout>