<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="32dp"
        tools:context=".ui.home.drawer.settings.Settings">

        <View
            android:layout_width="56dp"
            android:layout_height="6dp"
            android:background="?dividerColor"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:id="@+id/dark_mode_title"
                style="@style/SETTINGS_ITEM"
                android:text="@string/dark_mode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dark_mode_subtitle"
                style="@style/SETTINGS_ITEM_SUBTITLE"
                android:text="@string/toggle_between_dark_and_light_mode"
                app:layout_constraintEnd_toStartOf="@id/dark_mode_toggle_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dark_mode_title" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/dark_mode_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/update"
            app:cornerRadius="56dp"
            android:visibility="gone"
            android:textColor="@color/white"
            android:backgroundTint="@color/gray_dark"
            android:textAppearance="?textAppearanceOverline"
            android:id="@+id/app_update_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>