<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar_investments" />

        <TextView
            android:id="@+id/empty_investment_text"
            style="@style/CONSTRAINT_MATCH_PARENT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/empty_coins_list"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:visibility="gone"
            />

        <androidx.core.widget.NestedScrollView
            style="@style/CONSTRAINT_CENTER_HORIZONTAL"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/each"
                    android:paddingHorizontal="16dp"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:paddingVertical="4dp"
                    android:background="?listHeaderColor"
                    android:id="@+id/each_investment_label"
                    android:visibility="gone"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/investments_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/combined"
                    android:paddingHorizontal="16dp"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:paddingVertical="4dp"
                    android:background="?listHeaderColor"
                    android:id="@+id/combined_investment_label"
                    android:visibility="gone"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/combined_investments_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>