<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="history"
            type="com.fiore.wazirxticker.data.database.entities.History" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            style="@style/CONSTRAINT_MATCH_PARENT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/white_transparent_88"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/coin_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textStyle="bold"
                        tools:text="DOGE"
                        android:text="@{history.name}"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        app:layout_constraintEnd_toStartOf="@id/edit_history"
                        app:layout_constraintStart_toEndOf="@id/coin_name"
                        app:layout_constraintTop_toTopOf="@id/coin_name"
                        app:layout_constraintBottom_toBottomOf="@id/coin_name"
                        tools:textColor="@color/md_green_500"
                        tools:text="(+$10000 / +100%)"
                        android:ellipsize="end"
                        android:textStyle="bold"
                        profitColor="@{history.profitAmount}"
                        android:text="@{history.formattedProfitAndPercent()}"
                        android:textAppearance="?attr/textAppearanceBody1"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_edit"
                        app:layout_constraintTop_toTopOf="@id/coin_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/edit_history"
                        android:background="?selectableItemBackgroundBorderless"
                        app:layout_constraintBottom_toBottomOf="@id/coin_name"
                        app:tint="@color/investment_sell_tab_color_state_list" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/buy_date"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/md_green_500"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?textAppearanceBody1"
                            tools:text="12/12/2010"
                            android:text="@{history.formattedBuyDate()}"
                            />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/sell_date"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/md_red_500"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:textAppearance="?textAppearanceBody1"
                            tools:text="12/12/2010"
                            android:text="@{history.formattedSellDate()}"
                            />


                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bought_at"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?textAppearanceBody1"
                            tools:text="12.34/DOGE"
                            android:text="@{history.formattedBoughtAt()}"
                            />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/sold_at"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:textAppearance="?textAppearanceBody1"
                            tools:text="13.32/DOGE"
                            android:text="@{history.formattedSoldAt()}"
                            />


                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/amount_invested"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?textAppearanceBody1"
                            tools:text="$23,000"
                            android:text="@{history.formattedAmountInvested()}"
                            />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/amount_received"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:textAppearance="?textAppearanceBody1"
                            tools:text="$20,000"
                            android:text="@{history.formattedAmountReceived()}"
                            />


                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>